<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <TextView
        android:autoLink="web"
        android:id="@+id/textView"
        android:linksClickable="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/paste_google_drive_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/driveLink"
        android:paddingStart="2dp"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:background="@drawable/custom_backgroud"
        android:hint="@string/https_drive_google_com_file_d_1sxe2tkyvjniyyidcwptejgvq6gict_view_usp_drivesdk"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="@string/https_drive_google_com_file_d_1sxe2tkyvjniyyidcwptejgvq6gict_view_usp_drivesdk"
        tools:ignore="RtlSymmetry" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driveLink">

        <Button
            android:id="@+id/paste"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/custom_backgroud"
            android:text="@string/paste"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/custom_backgroud"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/generate"
            app:layout_constraintStart_toEndOf="@+id/paste"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/custom_backgroud"
            android:text="@string/generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/directlink"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_backgroud"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="36dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/directlink"
            tools:layout_editor_absoluteX="20dp">

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_backgroud"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/copy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_backgroud"
                android:text="@string/copy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/reset"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/this_will_only_work_for_files_that_you_upload_google_drive_it_will_not_work_for_documents_presentations_etc_created_inside_google_drive_if_you_want_to_create_a_direct_donoad_link_for_those_first_donload_them_to_your_computer_then_upload_that_file_back_on_to_google_drive"
            android:textAlignment="gravity"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>